--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,11 @@
 .section button{
 	margin-top:12px;
 }
+
+.loading-overlay {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.4);
+      z-index: 100000;
+}
